fix: spacing, add: showcase box components

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -32,6 +32,7 @@
 }
 
 .footer .who-are-we{
+  width: 40rem;
   border-right: 1px solid #575757;
 }
 
@@ -41,11 +42,17 @@
 
 .footer .contact form{
   background-color: #D9D9D9;
+  border-radius: .25rem;
 }
 
 .footer input,
 .footer textarea{
   border-radius: .25rem;
+  padding-left: 1rem;
+}
+
+.footer textarea{
+  padding-top: .5rem;
 }
 
 .footer .contact input{
